--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,14 @@
 }
 
 body {
-	background: #f3f3f3;
+	background: #fff;
 	color: #323436;
 	font-family: sans-serif;
 }
 
 a {
 	text-decoration: none;
-	color: #ccff33;
+	color: #617ec0;
 }
 
 a:hover,
@@ -310,7 +310,7 @@ a:focus {
 /* Main ---------------- */
 
 #main .section {
-	padding: 4em 0 6em 0;
+	padding: 2em 0 2.5em 0;
 	display: inline-block;
 	width: 100%;
 	vertical-align: top;
@@ -318,7 +318,7 @@ a:focus {
 }
 
 #main .section .headline {
-	font-size: 3.75em;
+	font-size: 1.75em;
 	font-weight: 300;
 	font-family: 'Lato', sans-serif;
 	line-height: 1.1;
