removing "view more" link from watchers and just showing the watchers

--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -435,6 +435,14 @@
   font-weight: bold;
 }
 
+.fogbugz-helper-ticket-tweaks .subscribers-list .expander {
+  display: none;
+}
+
+.fogbugz-helper-ticket-tweaks .subscribers-list .elided {
+  display: inline;
+}
+
 /* Container */
 .fogbugz-helper-ticket-tweaks section.case {
   width: auto;
