--- a/_includes/css/style.css
+++ b/_includes/css/style.css
@@ -490,15 +490,19 @@ a:focus {
 }
 
 /* Extra cms classes ---------------- */
-.cms textarea {
-	width: 100%;
-	height: 16em;
-}
 
 /* ------------------------------------------------------------
    Page Specific
    --------------------------------------------------------- */
 
+/* Fogbugz Helper */
+#user_script {
+	border: 1px solid #3a3;
+	background: #dfd;
+	padding: .5em;
+	width: 100%;
+	height: 17em;
+}
 
 /* ------------------------------------------------------------
    MEDIA QUERIES
