--- a/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
+++ b/_includes/greasemonkey/fogbugz-helper/fogbugz-helper.css
@@ -13,14 +13,6 @@
   margin: .5em 0;
 }
 
-#fogbugz-helper-prefs-menu:after {
-  content: '';
-  display: block;
-  height: 0;
-  border-bottom: 1px solid #bac2cc;
-  margin: 5px 12px 0px 12px;
-}
-
 #fogbugz-helper-prefs-menu input {
   margin-right: .5em;
   vertical-align: text-top;
@@ -45,11 +37,60 @@
   text-decoration: underline;
 }
 
+.fogbugz-helper-tool {
+  padding: .75em 0;
+  border-top: 1px solid #bac2cc;
+}
+
+.fogbugz-helper-headline {
+  margin: 0 0 .25em 0;
+}
+
   /* //////////////////////////
  // Use Stylesheet (for debugging)
 ////////////////////////// */
 #fogbugz-helper-css {
   content: "loaded";
+}
+
+  /* //////////////////////////
+ // Hotkeys
+////////////////////////// */
+
+.fogbugz-helper-hotkeys input {
+  width: 4em;
+  margin-left: .5em;
+}
+
+.fogbugz-helper-hotkey {
+  margin: .5em 0;
+}
+
+.fogbugz-helper-hotkeys-wrapper {
+  position: fixed;
+  background: rgba(0, 0, 0, .8);
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  overflow: auto;
+  z-index: 100001;
+  padding: 2em 0;
+}
+
+.fogbugz-helper-hotkeys-modal {
+  background: #fff;
+  border-radius: 1em;
+  padding: 1em;
+  margin: auto;
+  display: table;
+}
+
+.fogbugz-helper-hotkey-input-wrapper {
+  display: inline-block;
+  width: 3em;
+  margin-right: .5em;
+  font-weight: bold;
 }
 
   /* //////////////////////////
